2017-05-29  Kirit Saelensminde  <kirit@felspar.com>
 Remove `variant` for storing atoms in `json`

2017-05-11  Kirit Saelensminde  <kirit@felspar.com>
 Don't print empty objects in the log stream.

2017-05-07  Kirit Saelensminde  <kirit@felspar.com>
 Load the global logging configuration much later so it can be changed using the `-i` or `-j` command line switches.

2017-05-02  Kirit Saelensminde  <kirit@felspar.com>
 * Better integrate `utf::u8_view` and `string`.
 * Make `array-view` sliceable.

2017-04-28  Kirit Saelensminde  <kirit@felspar.com>
 There is now an explicit constructor from `std::string` for the `u8_view`.

2017-04-27  Kirit Saelensminde  <kirit@felspar.com>
 Make dates fully comparable.

2017-04-11  Kirit Saelensminde  <kirit@felspar.com>
 Improve error report when coercing JSON to strings fails.

2017-03-22  Kirit Saelensminde  <kirit@felspar.com>
 The `unexpected_eof` error can now take a `boost::system::error_code` for use with socket errors.

2017-03-15  Kirit Saelensminde  <kirit@felspar.com>
 * Improve the way that the JSON atomic type can be constructed from integral types.
 * Allow us to move the underlying string out of a tagged string rvalue.

2017-03-12  Kirit Saelensminde  <kirit@felspar.com>
 Make the object logging functions properly variadic.

2017-02-05  Kirit Saelensminde  <kirit@felspar.com>
 Add a time profile for generating a histogram of timing results.

2017-01-29  Kirit Saelensminde  <kirit@felspar.com>
 Make the performance counter movable.

2017-01-27  Kirit Saelensminde  <kirit@felspar.com>
 * Add better support for "dynamic" modules.
 * Log messages can be created directly from JSON.

2017-01-25  Kirit Saelensminde  <kirit@felspar.com>
 Add support for stderr to the stdout logger.

2017-01-21  Kirit Saelensminde  <kirit@felspar.com>
 Removed last uses of `boost::bind`.

2017-01-19  Kirit Saelensminde  <kirit@felspar.com>
 * Fix bug in the stdout logger when logging objects and arrays.