@@ -1,5 +1,5 @@
  /*
-    Copyright 1999-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 1999-2017, Felspar Co Ltd. http://fost.3.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -7,6 +7,7 @@
 
 
 #include "fost-core-test.hpp"
+#include <fost/unicode>
 
 
 using namespace fostlib;
@@ -30,7 +31,7 @@ FSL_TEST_FUNCTION( key_object ) {
     jcursor( "key2" ).insert( object, "value2" );
     json::const_iterator p = object.begin();
     FSL_CHECK_EQ( *p, json( "value1" ) );
-    FSL_CHECK_EQ( p->get< string >().value(), L"value1" );
+    FSL_CHECK_EQ(p->get<utf::u8_view>().value(), "value1");
     FSL_CHECK_EQ( p.key(), json( "key1" ) );
     FSL_CHECK_NOTHROW( ++p );
     FSL_CHECK_EQ( *p, json( "value2" ) );
