@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2016, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -9,6 +9,7 @@
 #include <fost/datetime>
 #include <fost/log>
 #include <fost/test>
+#include <fost/unicode>
 
 
 FSL_TEST_SUITE( timestamps );
@@ -34,9 +35,9 @@ FSL_TEST_FUNCTION( basic ) {
 FSL_TEST_FUNCTION( json ) {
     fostlib::timestamp n(fostlib::timestamp(2012, 10, 4, 13, 45));
     fostlib::json j( fostlib::coerce< fostlib::json >( n ) );
-    FSL_CHECK(j.get<fostlib::string>());
-    FSL_CHECK_EQ( j, fostlib::json("2012-10-04T13:45:00Z") );
-    FSL_CHECK_EQ( fostlib::coerce< fostlib::timestamp >( j ), n );
+    FSL_CHECK(j.get<fostlib::utf::u8_view>()); // Check we do have a string
+    FSL_CHECK_EQ(j, fostlib::json("2012-10-04T13:45:00Z"));
+    FSL_CHECK_EQ(fostlib::coerce< fostlib::timestamp >( j ), n);
 }
 
 
@@ -46,7 +47,7 @@ FSL_TEST_FUNCTION( json_now ) {
     fostlib::log::debug(fostlib::c_fost_base_core)
         ("n", "string", fostlib::coerce<fostlib::string>(n))
         ("n", "json", j);
-    FSL_CHECK(j.get<fostlib::string>());
+    FSL_CHECK(j.get<fostlib::utf::u8_view>());
     FSL_CHECK_EQ( fostlib::coerce< fostlib::string >( n ).length(), 27u);
     FSL_CHECK_EQ( fostlib::coerce< fostlib::timestamp >( j ), n );
 }
@@ -54,8 +55,8 @@ FSL_TEST_FUNCTION( json_now ) {
 
 FSL_TEST_FUNCTION( json_microsecond ) {
     fostlib::timestamp n(fostlib::timestamp(2012, 10, 4, 13, 45, 3, 456789));
-    fostlib::json j( fostlib::coerce< fostlib::json >( n ) );
-    FSL_CHECK(j.get< fostlib::string >());
+    fostlib::json j(fostlib::coerce<fostlib::json>(n));
+    FSL_CHECK(j.get<fostlib::utf::u8_view>());
     FSL_CHECK_EQ( j, fostlib::json("2012-10-04T13:45:03.456789Z") );
     FSL_CHECK_EQ( fostlib::coerce< fostlib::timestamp >( j ), n );
 }
