@@ -1,3 +1,6 @@
+2017-05-31  Kirit Saelensminde  <kirit@felspar.com>
+ Deprecate use of the `fostlib::string` JSON coercion in favour of `utf::u8_view`.
+
 2017-05-29  Kirit Saelensminde  <kirit@felspar.com>
  Remove `variant` for storing atoms in `json`
 
